correction version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,15 @@ body {
   font-family: raleway, Arial, Helvetica, sans-serif;
   margin: 0;
 }
+.section1 {
+  width: 95%;
+  margin: 0px;
+}
 h1 {
   font-size: 1.4em;
   margin-left: 20px;
   margin-right: 20px;
+ 
 }
 h2 {
   font-size: 1.3em;
@@ -446,6 +451,11 @@ footer li {
   h1 {
     font-size: 1.2em;
     margin-left: 10px;
+  }
+  .section1  {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto; 
   }
   .section1 p {
     font-size: 0.9em;
